--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="sec_dos">
                 <div class="imageninicial">
-                    <img id="imageninicio" src="./assets/Muñeco.png">
+                    <img id="imageninicio" src="./assets/chico.png">
                 </div>
                 <div class="txtinicial">
                     <p id="txtinicial1"></p>
